Fixed community description alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,14 +67,15 @@ padding-top: 15px;}
 
 .aboutus {text-align: left}
 
-.whatisthecommunity {padding-top: 15px;
-			text-align: left;}
 
 .thisisthecommunity {padding-top: 15px;
-                    text-align: left;}
+                    text-align: left;
+display:block;
+            margin: auto;}
 
-#communityimg {align-content: center;
-			padding-top: 40px; 
+#communityimg {display:block;
+            margin: auto;
+			padding-top: 20px; 
 			padding-bottom: 20px; 
 			width:300px;}
 
